@@ -11,21 +11,21 @@ import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import java.util.Optional;
+import java.util.Set;
 import org.junit.Test;
 import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.model.api.DataSchemaNode;
 import org.opendaylight.yangtools.yang.model.api.ListSchemaNode;
 import org.opendaylight.yangtools.yang.model.api.SchemaContext;
-import org.opendaylight.yangtools.yang.model.repo.api.StatementParserMode;
+import org.opendaylight.yangtools.yang.parser.api.YangParserConfiguration;
 
 public class YT859Test {
     @Test
     public void testAugmentUnsupported() throws Exception {
-        final SchemaContext context = StmtTestUtils.parseYangSources("/bugs/YT859/", ImmutableSet.of(),
-            StatementParserMode.DEFAULT_MODE);
+        final SchemaContext context = StmtTestUtils.parseYangSources("/bugs/YT859/", Set.of(),
+            YangParserConfiguration.DEFAULT);
         assertEquals(4, context.getModules().size());
 
         final DataSchemaNode named = Iterables.getOnlyElement(context.findModules("xyzzy"))
